# ArchitectureAndDesignPatterns_CW_ContentManagingSystem

./: .gitignore  CMakeLists.txt  README.md
source/: ArchitectureAndDesignPatterns_CW_ContentManagingSystem.cpp  ArchitectureAndDesignPatterns_CW_ContentManagingSystem.hpp  TestPage.json  a.bat  cAuthServer.cpp  cAuthServer.hpp  cComponentRegistry.cpp  cComponentRegistry.hpp  cException.hpp  cIoC.hpp  cListOfUsers.cpp  cListOfUsers.hpp  cPageController.cpp  cPageController.hpp  cPageId.cpp  cPageId.hpp  cRequestAccessToPage.cpp  cRequestAccessToPage.hpp
source/components/: a.bat  cHeaderComponent.cpp  cHeaderComponent.hpp  cImageComponent.cpp  cImageComponent.hpp  cTextComponent.cpp  cTextComponent.hpp  iComponent.cpp  iComponent.hpp  makeOUTSClass.py
source/components/tests/: test_cHeaderComponent.cpp  test_cImageComponent.cpp  test_cTextComponent.cpp  test_iComponent.cpp
source/database/: a.bat  cJSONDataBase.cpp  cJSONDataBase.hpp  makeOUTSClass.py
source/database/tests/: test_cJSONDataBase.cpp
source/tests/: test_ArchitectureAndDesignPatterns_CW_ContentManagingSystem.cpp  test_cAuthServer.cpp  test_cComponentRegistry.cpp  test_cException.cpp  test_cIoC.cpp  test_cListOfUsers.cpp  test_cPageController.cpp  test_cPageId.cpp  test_cRequestAccessToPage.cpp  test_cUser.cpp  test_iCommand.cpp
specifications/: CMS_with_RBAC.yaml  ClassDiagram.mermaid  SequenceDiagramm.mermaid  dirTree.txt
